@@ -1,12 +1,14 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form string="Company">
+<form string="Company" col="6">
     <label name="party"/>
     <field name="party"/>
     <label name="currency"/>
     <field name="currency"/>
-    <notebook colspan="4">
+    <label name="timezone"/>
+    <field name="timezone"/>
+    <notebook colspan="6">
         <page string="Company" col="2" id="company">
             <label name="parent"/>
             <field name="parent"/>
