@@ -1,3 +1,5 @@
+* Add timezone on company to compute today
+
 Version 3.0.0 - 2013-10-21
 * Bug fixes (see mercurial logs for details)
 
